--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 ######################## default configuration ####################
 baseURL = "https://demo.gethugothemes.com/bookworm-light/"
-title = "Bookworm - Personal Blog Template"
+title = "Daniel Luke - Stoic Thoughts"
 theme = "bookworm-light"
 # post pagination
 paginate = "5"
@@ -78,7 +78,7 @@ logo_width = "200px"
 favicon = "images/favicon.png"
 # Meta data
 description = "This is meta description"
-author = "Themefisher"
+author = "Daniel Luke"
 # contact form action
 contact_form_action = "#" # contact form works with https://formspree.io
 # search
@@ -86,7 +86,7 @@ search = true
 # main section
 mainSections = ["blog"]
 # copyright
-copyright = "Designed & Developed By [Gethugothemes](https://gethugothemes.com/)"
+copyright = "&copy; 2022 - [DanielLuke.blog](#)"
 
 # Preloader
 [params.preloader]
@@ -116,96 +116,60 @@ expire_days = 2
 
 ############################# Main Menu ########################
 [[menu.main]]
-name = "Home"
+name = "Articles"
 url = "/"
 weight = 1
   
 [[menu.main]]
+name = "Topics"
+url = "categories"
+weight = 2
+
+  [[menu.main]]
+  parent = "Topics"
+  name = "Practical Wisdom"
+  url = "categories/practical-wisdom"
+  weight = 1
+
+  [[menu.main]]
+  parent = "Topics"
+  name = "Meditations"
+  url = "categories/meditation"
+  weight = 2
+
+  [[menu.main]]
+  parent = "Topics"
+  name = "Case Studies"
+  url = "categories/case-study"
+  weight = 3
+
+[[menu.main]]
+name = "Tags"
+url = "tags/"
+weight = 3
+
+[[menu.main]]
 name = "About"
 url = "about/"
-weight = 3
-  
-[[menu.main]]
-name = "Contact"
-url = "contact/"
 weight = 4
-
-[[menu.main]]
-weight = 6
-url = "#"
-name = "Pages"
-hasChildren = true
-
-  [[menu.main]]
-  parent = "Pages"
-  name = "Author"
-  url = "author/"
-  weight = 1
-  
-  [[menu.main]]
-  parent = "Pages"
-  name = "Tags"
-  url = "tags/"
-  weight = 2
-  
-  [[menu.main]]
-  parent = "Pages"
-  name = "Category"
-  url = "categories/"
-  weight = 3
-  
-  [[menu.main]]
-  parent = "Pages"
-  name = "Elements"
-  weight = 4
-  url = "elements/"
-  
-  [[menu.main]]
-  parent = "Pages"
-  name = "Privacy"
-  url = "privacy/"
-  weight = 5
-  
-  [[menu.main]]
-  parent = "Pages"
-  name = "Terms & Conditions"
-  url = "terms-conditions/"
-  weight = 6
 
 ############################# Footer Menu ########################
 [[menu.footer]]
-name = "About"
-url = "about/"
-weight = 1
-
-[[menu.footer]]
-name = "Authors"
-url = "author/"
+name = "The Author"
+url = "author/daniel-luke"
 weight = 2
 
 [[menu.footer]]
-name = "Privacy"
-url = "privacy/"
+name = "About The Blog"
+url = "about/"
 weight = 3
 
 [[menu.footer]]
-name = "Terms & Conditions"
-url = "terms-conditions/"
+name = "Resources"
+url = "resources/"
 weight = 4
 
 # Social Icons
 [[params.social]]
-icon = "lab la-facebook-f" # https://icons8.com/line-awesome
-url = "https://www.facebook.com/"
-
-[[params.social]]
 icon = "lab la-twitter" # https://icons8.com/line-awesome
-url = "https://www.twitter.com/"
-
-[[params.social]]
-icon = "lab la-instagram" # https://icons8.com/line-awesome
-url = "https://www.instagram.com/"
-
-[[params.social]]
-icon = "lab la-linkedin-in" # https://icons8.com/line-awesome
-url = "https://www.linkedin.com/"
+url = "https://twitter.com/_danielluke"
