--- a/.github/workflows/production.yaml
+++ b/.github/workflows/production.yaml
@@ -28,6 +28,7 @@ jobs:
     name: Deploy PROD
     needs: build
     runs-on: ubuntu-22.04
+    environment: Production
     steps:
           - name: Download Artifacts
             uses: actions/download-artifact@v2
