--- a/.github/workflows/qa.yaml
+++ b/.github/workflows/qa.yaml
@@ -1,4 +1,4 @@
-name: Release Pipeline
+name: QA
 on:
   push:
     tags-ignore:
@@ -26,7 +26,7 @@ jobs:
           path: public/
           retention-days: 1
   deployAcc:
-    name: Deploy PROD
+    name: Deploy ACC
     needs: build
     runs-on: ubuntu-22.04
     environment: Acceptance
